--- a/index.html
+++ b/index.html
@@ -6,8 +6,32 @@
     </head>
 
     <body>
-        <header class="navigation">
-            <div>
+       <!--  <header class="navigation">  -->
+           
+        <nav class="nav">
+            <div class="container">
+                <div class="logo">
+                    <img src="personal_logo.png" alt="personal logo" width="250" height="75" >
+                </div>
+
+                <div id="mainListDiv" class="main_list">
+                    <ul class="navlinks">
+                        <li>About</li>
+                        <li>Design</li>
+                        <li>Development</li>
+                    </ul>
+                </div>
+
+                <span class="navTrigger">
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                </span>
+            </div>
+        </nav>  
+           
+           <!--
+            <div> 
                 <img src="personal_logo.png" alt="personal logo" width="314" height="111" >
 
                 <nav class="inline-block logo"> 
@@ -17,8 +41,8 @@
                         <li>Development</li>
                     </ul>
                 </nav>
-            </div>
-        </header>
+            </div>  
+        </header>  -->
 
         <section class="heroImg">
             <div class="content">
