--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
     <head>
-        <link rel="stylesheet" href="style.css">
         <title>Portfolio: Natalie Paulson</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
 
     <body>
