--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="nav">
             <div class="container">
                 <div class="logo">
-                    <img src="personal_logo.png" alt="personal logo" width="250" height="75" >
+                    <img src="images/personal_logo.png" alt="personal logo" width="250" height="75" >
                 </div>
 
                 <div id="mainListDiv" class="main_list">
@@ -52,7 +52,7 @@
             </div>
 
             <div>
-                <img src="self_image_placeholder.jpg" alt="profile image" width="707" height="426">
+                <img src="images/outsideheadshot2 JPEG.jpg" alt="profile image" width="707" height="426">
             </div>
         </section>
 
